# data-rct

./: .gitignore  Cargo.toml  DataRct.sln  LICENSE  Package.swift  README.md  clippy.toml  generate-csharp.ps1  generate-csharp.sh  generate-swift.sh  generate-xc-framework.sh  setup.sh
.github/workflows/: ci.yml  deploy.yml
DataRtc.Test/: BleClientTests.cs  BlePeripheralManagerTests.cs  DataRtc.Test.csproj
bindings/csharp/: DataRct.sln
bindings/csharp/DataRct/: DataRCT.cs  DataRct.csproj  Discovery.cs  NearbyServer.cs
bindings/csharp/DataRct/BluetoothLowEnergy/: BleClient.cs  BlePeripheralManager.cs  DiscoveryDelegate.cs  L2CAPClient.cs  NearbyServerDelegate.cs  WinRtHelper.cs
bindings/kotlin/: build.gradle  settings.gradle
bindings/kotlin/DataRCT/: build.gradle
bindings/kotlin/DataRCT/src/androidTest/java/com/julian_baumann/data_rct/: ExampleInstrumentedTest.kt
bindings/kotlin/DataRCT/src/main/: AndroidManifest.xml
bindings/kotlin/DataRCT/src/main/java/com/julian_baumann/data_rct/: BleAdvertisement.kt  Discovery.kt  NearbyServer.kt
bindings/kotlin/DataRCT/src/main/java/com/julian_baumann/data_rct/bluetoothLowEnergy/: BLECentralManager.kt  BLEImplementation.kt  BLEPeripheralManager.kt  BleDiscovery.kt  L2CAPClientManager.kt  L2CAPStream.kt  L2CapServer.kt
bindings/kotlin/DataRCT/src/test/java/com/julian_baumann/data_rct/: ExampleUnitTest.kt
bindings/kotlin/app/: build.gradle
bindings/kotlin/app/src/androidTest/java/com/julian_baumann/data_rctapp/: ExampleInstrumentedTest.kt
bindings/kotlin/app/src/main/: AndroidManifest.xml
bindings/kotlin/app/src/main/java/com/julian_baumann/data_rctapp/: Helper.kt  MainActivity.kt  ReceiveProgress.kt  UserPreferencesManager.kt
bindings/kotlin/app/src/main/java/com/julian_baumann/data_rctapp/ui/theme/: Color.kt  Theme.kt  Type.kt
bindings/kotlin/app/src/main/java/com/julian_baumann/data_rctapp/views/: DeviceList.kt  DeviceView.kt  NameChangeDialog.kt  ReceivingView.kt
bindings/kotlin/app/src/main/res/values/: themes.xml
bindings/kotlin/app/src/test/java/com/julian_baumann/data_rctapp/: ExampleUnitTest.kt
bindings/kotlin/gradle/wrapper/: gradle-wrapper.properties
bindings/swift/: .gitignore
bindings/swift/Sources/DataRCT/: DataRCT.swift  Discovery.swift  Helper.swift  L2CAPStream.swift  NearbyServer.swift
bindings/swift/Sources/DataRCT/BluetootLowEnergy/: BLEClient.swift  BLEServer.swift
bindings/swift/Sources/DataRCT/BluetoothLowEnergy/: BLEClient.swift  BLEClientManager.swift  BLEPeripheralManager.swift  Constants.swift  L2CAPClient.swift  L2CAPStream.swift
bindings/swift/Tests/DataRCTTests/: DataRCTTests.swift
ffi/DataRCT-Swift/: Package.swift  generate-xc-framework.sh
ffi/DataRCT-Swift/Sources/DataRCT/: DataRCT.swift
ffi/data_rct_ffi/: Cargo.toml  uniffi.toml
ffi/data_rct_ffi/src/: data_rct.udl  lib.rs
ffi/swift/: .gitignore  IOSApp-Bridging-Header.h  Package.swift  README.md  build.sh  generate-xc-framework.sh  xc-universal-binary.sh
ffi/swift/.swiftpm/xcode/xcshareddata/xcschemes/: DataRCT.xcscheme
ffi/swift/DataRCTFFI.xcframework/: Info.plist
ffi/swift/DataRCTFFI.xcframework/macos-arm64_x86_64/Headers/: DataRCTFFI.h  module.modulemap
ffi/swift/Output/DataRCT.xcframework/: Info.plist
ffi/swift/Output/DataRCT.xcframework/ios-arm64/Headers/DataRCT/: dataRctFFI.modulemap
ffi/swift/Output/DataRCT.xcframework/ios-arm64_x86_64-simulator/Headers/DataRCT/: DataRCT.swift
ffi/swift/Output/DataRCT.xcframework/macos-arm64_x86_64/Headers/DataRCT/: dataRctFFI.h
ffi/swift/Sources/DataRCT/: DataRCT.swift  Discovery.swift
ffi/swift/Tests/DataRCTTests/: DataRCTTests.swift
src/: discovery.rs  encryption.rs  lib.rs  observer.rs  stream.rs  transform.rs  transmission.rs  udp_discovery.rs
src/ble/: Cargo.toml
src/ble/src/: advertisement.rs  discovery.rs  lib.rs
src/ble/src/android/: mod.rs
src/ble/src/android/java/: settings.gradle
src/ble/src/android/java/app/: build.gradle
src/ble/src/android/java/app/src/androidTest/java/com/julian_baumann/data_rct/: ExampleInstrumentedTest.java
src/ble/src/android/java/app/src/main/: AndroidManifest.xml
src/ble/src/android/java/app/src/main/java/com/julian_baumann/data_rct/: Adapter.java
src/ble/src/android/java/app/src/main/res/values/: strings.xml  themes.xml
src/ble/src/android/java/app/src/main/res/values-night/: themes.xml
src/ble/src/android/java/app/src/test/java/com/julian_baumann/data_rct/: ExampleUnitTest.java
src/ble/src/android/java/gradle/wrapper/: gradle-wrapper.properties
src/ble/src/apple/: events.rs  ffi.rs  mod.rs  peripheral_manager.rs
src/data_rct/: .gitignore  Cargo.toml
src/data_rct/src/: communication.rs  connection.rs  connection_request.rs  discovery.rs  encryption.rs  errors.rs  lib.rs  nearby.rs  stream.rs  transmission.rs
src/data_rct/src/discovery/: mdns_sd.rs  udp.rs
src/data_rct/src/transmission/: mod.rs  tcp.rs
src/data_rct/tests/: discovery.rs  encryption.rs  helper.rs  transmission.rs
src/data_rct_ffi/: Cargo.toml  build.rs  uniffi.toml
src/data_rct_ffi/src/: async_code.rs  data_rct.udl  data_rct_sync.udl  lib.rs  sync_code.rs
src/discovery/: mdns_discovery.rs  mdns_sd.rs  udp_discovery.rs
src/protocol/: Cargo.toml  build.rs
src/protocol/src/: communication.proto  discovery.proto  lib.rs
src/transmission/: tcp.rs  tcp_transmission.rs
tests/: discovery.rs  encryption.rs  helper.rs  transmission.rs
