[package]
name = "data_rct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
mdns-sd = "0.5.4"
x25519-dalek = { path = "deps/x25519-dalek" }
chacha20 = "0.9.0"
chacha20poly1305 = { version = "^0.10", features = ["stream"] }
rand_core = "0.6"

[dependencies.uuid]
version = "1.2.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]