[package]
name = "data_rct_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_rct = { package = "data_rct", path = "../../../data_rct" }
uniffi = { version = "0.23.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build", "cli"] }
