[package]
name = "ble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
bytes = "1.5.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
btleplug = "0.11.3"
uuid = { version = "1.6.1", features = ["v4"] }
futures = "0.3.30"
crossbeam-channel = "0.5.10"

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
objc_id = "0.1.1"


[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".build-dependencies]
swift-rs = { version = "1.0.6", features = ["build"] }
