[package]
name = "data_rct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
mdns-sd = "0.10.1"
x25519-dalek = "2.0.0-rc.3"
chacha20 = "0.9.0"
chacha20poly1305 = { version = "^0.10", features = ["stream"] }
uuid = { version = "1.2.0", features = ["v4", "fast-rng"]}
rand_core = "0.6"
downcast-rs = "1.2.0"
anyhow = "1.0"
thiserror = "1.0"
local-ip-address = "0.5.4"
