[package]
name = "data_rct"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
crossbeam-channel = "0.5"
mdns-sd = "0.10.1"
x25519-dalek = "2.0.0-rc.3"
chacha20 = "0.9.0"
chacha20poly1305 = { version = "^0.10", features = ["stream"] }
uuid = { version = "1.2.0", features = ["v4", "fast-rng"]}
rand_core = "0.6"
downcast-rs = "1.2.0"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5.0"
futures = "0.3"
tokio = {  version = "1.35.1", features = ["net", "io-util", "time"] }
async-prost = "0.4.0"
local-ip-address = { git = "https://github.com/julian-baumann/local-ip-address.git", branch = "main" }
prost-stream = "0.1.2"
android_logger = "0.13.3"
log = "0.4.20"
