[package]
name = "data_rct_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"


[dependencies]
data_rct = { package = "data_rct", path = "../data_rct" }
uniffi = { version = "0.25.3", features = ["cli"] }
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.25.3", features = ["build"] }
