[package]
name = "data_rct_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"


[dependencies]
async-std = "1.12.0"
data_rct = { package = "data_rct", path = "../data_rct" }
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", branch = "main", features = ["cli", "tokio", "default"] }
thiserror = "1.0"
tokio = { version = "1.35.1", features = ["sync"] }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", branch = "main", features = ["build"] }
